# snippets

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp
const_transitivity/: CMakeLists.txt  main.cpp
custom_iterator/: CMakeLists.txt  README.md  main.cpp
custom_iterator/include/: graycode_iterator.hpp  hilbert_iterator.hpp  matrix.hpp
custom_iterator/include/details/: graycode_iterator.hxx  hilbert_iterator.hxx  matrix.hxx
custom_iterator/src/: main.cpp
find_tuple/: CMakeLists.txt
find_tuple/src/: main.cpp
init/: CMakeLists.txt
shared_from_this/: CMakeLists.txt  main.cpp
std_copy/: CMakeLists.txt  main.cpp
virtual_init_ctor/: CMakeLists.txt  main.cpp
xmacro/: CMakeLists.txt  main.cpp
